Picom and Polybar changes

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -478,6 +478,7 @@ rounded-corners-exclude = [
 #  "window_type = 'normal'",
 #  "window_type = 'dock'",
 #  "window_type = 'bar'",
+  "window_type = 'toolbar'",
 #  "class_g = 'Polybar'",
 #  "class_g = 'dmenu'",
 #  "! name~=''",
