--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -34,7 +34,7 @@ font-3 = "Stick:size=12;2"
 
 modules-left = sep battery pulseaudio keyboard updates sep title
 modules-center = bspwm
-modules-right = previous playpause next spotify sep cal weather weather2 sep powermenu sep
+modules-right = previous playpause next spotify sep cal weather weather2 sep tray sep powermenu sep
 
 [settings]
 screenchange-reload = true
