--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -123,3 +123,9 @@ content = 󰣇
 content-background = ${color.alpha}
 content-foreground = ${color.fg0}
 content-padding = 1
+
+[module/tray]
+type = custom/script
+exec = echo "󰅀"
+format = <label>
+click-left = exec $HOME/.config/scripts/tray.sh
