Minor Polybar changes

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -32,7 +32,7 @@ font-1 = "Material Design Icons:size=12;2"
 font-2 = "Weather Icons:size=12;3"
 font-3 = "Stick:size=12;2"
 
-modules-left = sep battery pulseaudio keyboard updates sep title
+modules-left = sep battery pulseaudio keyboard updates
 modules-center = bspwm
 modules-right = previous playpause next spotify sep cal weather weather2 sep tray sep powermenu sep
 
