Minor Polybar changes

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -32,9 +32,9 @@ font-1 = "Material Design Icons:size=12;2"
 font-2 = "Weather Icons:size=12;3"
 font-3 = "Stick:size=12;2"
 
-modules-left = sep battery pulseaudio keyboard updates
+modules-left = sep battery pulseaudio keyboard updates sep previous playpause next spotify
 modules-center = bspwm
-modules-right = previous playpause next spotify sep cal weather weather2 sep tray sep powermenu sep
+modules-right = cal weather weather2 sep tray sep powermenu sep
 
 [settings]
 screenchange-reload = true
